--- a/style/style.css
+++ b/style/style.css
@@ -1,17 +1,6 @@
-#right-click-menu {
-	display:none;
-	background-color:#3c3c3c;
-	width:200px;
-	z-index:0;
-	position: absolute;
-	padding: 10px;
-	background-color: #ddd;
-	border: 1px solid #000;
-}
-
-#right-click-menu li {
+.debug {
 	display:block;
-	height:30px;
-	width:100%;
-	border: 1px solid #000;
+	background-color:#000;
+	color:#00FF00;
+	padding:3px;
 }
